apps/base/immich/routes.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich-route
  namespace: traefik
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.1.196
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`immich.akop.ro`)
      services:
        - kind: Service
          name: immich-server
          namespace: immich
          port: 2283
  tls:
    secretName: wildcard-certificate-secret
